[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu_buttons/settings.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/menu_bg.png" type="Texture" id=2]
[ext_resource path="res://menu_buttons/fullscreen_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu_buttons/maximize_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu_buttons/back_button.tscn" type="PackedScene" id=5]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu_bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="menu_area" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="center_row" type="HBoxContainer" parent="menu_area"]
margin_right = 1040.0
margin_bottom = 143.0

[node name="buttons" type="VBoxContainer" parent="menu_area/center_row"]
margin_right = 720.0
margin_bottom = 143.0

[node name="fullscreen" parent="menu_area/center_row/buttons" instance=ExtResource( 3 )]
margin_right = 720.0
margin_bottom = 45.0
rect_min_size = Vector2( 180, 45 )

[node name="maximize" parent="menu_area/center_row/buttons" instance=ExtResource( 4 )]
margin_top = 49.0
margin_right = 720.0
margin_bottom = 94.0
rect_min_size = Vector2( 720, 45 )

[node name="back" parent="menu_area/center_row/buttons" instance=ExtResource( 5 )]
margin_top = 98.0
margin_right = 720.0
margin_bottom = 143.0
rect_min_size = Vector2( 360, 45 )
[connection signal="pressed" from="menu_area/center_row/buttons/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="menu_area/center_row/buttons/maximize" to="." method="_on_maximize_pressed"]
[connection signal="pressed" from="menu_area/center_row/buttons/back" to="." method="_on_back_pressed"]
